--- a/Udemy-Next13/package.json
+++ b/Udemy-Next13/package.json
@@ -18,6 +18,7 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
+    "@types/react-datepicker": "^4.15.0",
     "@types/react-dom": "18.0.10",
     "@types/validator": "^13.7.17",
     "axios": "^1.4.0",
@@ -28,6 +29,7 @@
     "next": "13.1.4",
     "prisma": "^4.8.1",
     "react": "18.2.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.4",
     "validator": "^13.9.0"
